# telegram-cli

./: .gitignore  AGENTS.md  makefile  pyproject.toml  readme.md
.github/workflows/: ci.yml  release.yml  telegram-test-dc.yml
docs/: architecture.md
examples/: policy.json  read-batch.jsonl
schemas/: capabilities.json  schemas.json
scripts/: check_skill.py
skills/clitg/: SKILL.md
skills/clitg/agents/: openai.yaml
src/clitg/: __init__.py  __main__.py  catalog.py  cli.py  credentials.py  errors.py  features.py  models.py  operations.py  policy.py  raw.py  serialization.py  service.py  storage.py  telegram.py
tests/: conftest.py  test_agent_foundations.py  test_catalog_raw.py  test_cli.py  test_features.py  test_models_serialization.py  test_service.py  test_storage.py  test_telegram.py  test_telegram_test_dc.py
